# living-stream

./: .gitignore  CMakeLists.txt  README.md  living-stream  main.cpp
examples/: basic-config.yaml
include/: cnn_node.hpp  context.hpp  context_cache.hpp  llm_node.hpp  node.hpp
memory-bank/: active-context.md  lessons-learned.md  node-hierarchy.md  progress.md  project-vision.md  system-architecture.md
python/: __init__.py  api_server.py  cli.py  cnn_node.py  config.py  context.py  context_builder.py  context_cache.py  llm_node.py  node.py  node_hierarchy.py  requirements.txt  storage.py
python/tests/: __init__.py  conftest.py  test_api_server.py  test_cli.py  test_cnn_node.py  test_config.py  test_context.py  test_context_builder.py  test_context_cache.py  test_llm_node.py  test_node.py  test_node_hierarchy.py  test_storage.py
src/: cnn_node.cpp  context_cache.cpp  llm_node.cpp
